2004-06-21  Todd Berman  <tberman@off.net>

	* Commands/AutostartCommands.cs: workaround icewm issue, dont show
	tip of the day dialog automatically under any circumstance.

2004-06-21  John Luke <jluke@cfl.rr.com>

	* Gui/Pads/OpenTaskView.cs: implement a popup menu for copying
	a task to the clipboard, bug #56817

2004-06-20  Todd Berman  <tberman@off.net>

	* Services/ParserService/CodeCompletionDatabase.cs: fix nullref in
	file types that dont have a parser.

2004-06-20  Todd Berman  <tberman@off.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: fix bug #60352.

2004-06-18  Todd Berman  <tberman@off.net>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: cleanups, and a small
	icon related fixup.

2004-06-18  Todd Berman  <tberman@off.net>

	* Commands/MenuItemBuilders.cs: clean up accel path code.
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: reduce code complexity
	by removing the extra ArrayList. Also properly use the tab reordering
	event, closes bug #60356.

2004-06-17  John Luke  <jluke@cfl.rr.com>

	* Commands/ProjectBrowserCommands/ResourceFolderNodeCommands.cs:
	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
	* Commands/ProjectBrowserCommands/CombineNodeCommands.cs:
	* Commands/FileCommands.cs:
	* Gui/Dialogs/OptionPanels/ExternalToolPanel.cs:
	* Gui/Dialogs/ReferenceDialog/AssemblyReferencePanel.cs:
	* Internal/Project/Project/AbstractProject.cs:
	* Internal/Project/Combine/Combine.cs:
	* Gui/Dialogs/OptionPanels/ProjectOptions/DeployFileOptions.cs:
	use MonoDevelop.Gui.Widgets.FileSelector instead of Gtk.FileSelection

	* Gui/Pads/HelpBrowser/HelpViewer.cs: set IsViewOnly property to true
	so we don't crash on save

	* Gui/Pads/ProjectBrowser/BrowserNode/FileNode.cs:
	do not force an extension on renamed files
	fixes bug # 59677

	* Commands/FileCommands.cs: workaround for #59731

2004-06-16  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/NewProjectDialog.cs: guard against unauthorized